# copier-action

./: .actrc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  devbox.json  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: actionlint.yml
.github/workflows/: ci.yml  docs.yml  release-v1.yml  release.yml
copier-action/: validate_and_process_inputs.py  validate_inputs.py
scripts/: run_check_update_and_set_outputs.py  validate_and_process_inputs.py
tests/: README.md  build_test_data.py  helpers.py  set_env_vars.py
